selfhost/test/parser/import_error_forbidden.out
Error at %FILE_NAME%:3:1
Unexpected token 'import':
  |  import a, b, c, from "./abc"
     ^